# file-pool

./: .gitignore  CMakeLists.txt  DesignText.cpp  DesignText.h  Exceptions.h  File.cpp  File.h  FilesManager.cpp  FilesManager.h  README.md  is_stl_container_impl.h  main.cpp
.github/ISSUE_TEMPLATE/: bug_report.md
CodeTests/: ComplexDataStructure.cpp  ComplexDataStructureTest.cpp  ExceptionsTester.cpp  FileTestNotVector.cpp  FileTestOpertorsNotVectors.cpp  FileTestOpertorsVectors.cpp  FileTestVector.cpp  FilesManagerOperatorsTest.cpp  FilesManagerTest.cpp  README-Tests.cpp
src/: File.cpp  File.hpp  FileWrappers.cpp  FileWrappers.h  FilesManager.cpp
src/Headers/: File.hpp  FilesManager.hpp
src/Sources/: File.cpp  FilesManager.cpp
src/Utilities/: DesignText.cpp  Exceptions.hpp
src/extentions/: std_extentions.cpp  std_extentions.h
src/headers/: File.hpp  FilesManager.hpp
src/sources/: File.cpp  FilesManager.cpp
src/utilities/: DesignText.hpp
